added sigma.js implementation WIP

--- a/d3graph.html
+++ b/d3graph.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <title>Programming Languages Influence Network</title>
-<script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
 <style>
 circle {
   fill: #f00;
@@ -21,6 +20,7 @@ circle {
 </style>
 </head>
 <body>
-<script src="graph.js"></script>
+<script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+<script src="d3graph.js"></script>
 </body>
 </html>
