--- a/sigmagraph.html
+++ b/sigmagraph.html
@@ -1,33 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Programming Languages Influence Network</title>
-<style>
-body {
-background:#000;
-}
-.sigma-parent {
-position:relative;
-background:#222;
-height:900px;
-}
-.sigma-expand {
-position:absolute;
-width:100%;
-height:100%;
-top:0;
-left:0;
-}
-</style>
-</head>
-<body>
-<div class="sigma-parent">
-  <div class="sigma-expand" id="sig"></div>
-</div>
+  <head>
+    <meta charset="utf-8">
+    <title>Programming Languages Influence Network</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
-<script src="http://sigmajs.org/js/sigma.min.js"></script>
-<script src="sigmagraph.js"></script>
-</body>
+    <!-- Le styles -->
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <style>
+    body {
+    padding-top:50px;
+    background:#222;
+    }
+    .sigma-parent {
+    position:relative;
+    background:#222;
+    height:800px;
+    }
+    .sigma-expand {
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    }
+    </style>
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+  </head>
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="/">Exploring Data</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language Paradigm <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="nav-collapse collapse">
+            <form class="navbar-search pull-left">
+              <input type="text" class="search-query" placeholder="Show Language">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container"><div class="row"><div class="span12">
+      <div class="sigma-parent">
+        <div class="sigma-expand" id="sig"></div>
+      </div>
+    </div></div></div>
+
+    <script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://sigmajs.org/js/sigma.min.js"></script>
+    <script src="sigmagraph.js"></script>
+  </body>
 </html>
