moved graph logic to langs.js

--- a/sigmagraph.html
+++ b/sigmagraph.html
@@ -47,15 +47,15 @@
             <ul class="nav">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language Paradigm <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-
+                <ul class="dropdown-menu" id="paradigms">
+                  <li class="active"><a href="">All Languages</a></li>
                 </ul>
               </li>
             </ul>
           </div>
           <div class="nav-collapse collapse">
             <form class="navbar-search pull-left">
-              <input type="text" class="search-query" placeholder="Show Language">
+              <input type="text" class="search-query" placeholder="Highlight Language">
             </form>
           </div>
         </div>
@@ -71,6 +71,7 @@
     <script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="http://sigmajs.org/js/sigma.min.js"></script>
+    <script src="langs.js"></script>
     <script src="sigmagraph.js"></script>
   </body>
 </html>
