--- a/sigmagraph.html
+++ b/sigmagraph.html
@@ -45,6 +45,11 @@
           <a class="brand" href="/">Exploring Data</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
+              <li><a class="showhelp" href="">Help</a></li>
+            </ul>
+          </div>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language Paradigm <b class="caret"></b></a>
                 <ul class="dropdown-menu" id="paradigms">
@@ -67,6 +72,19 @@
         <div class="sigma-expand" id="sig"></div>
       </div>
     </div></div></div>
+
+    <div id="help" class="modal hide fade">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Help</h3>
+      </div>
+      <div class="modal-body">
+        <p>One fine body…</p>
+      </div>
+      <div class="modal-footer">
+        <a href="#" class="close" data-dismiss="modal" class="btn">Close</a>
+      </div>
+    </div>
 
     <script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
